--- a/.github/ISSUE_TEMPLATE/a11y-testing.yaml
+++ b/.github/ISSUE_TEMPLATE/a11y-testing.yaml
@@ -12,7 +12,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        This issue template will help walk you through [required foundational accessibility testing](https://depo-platform-documentation.scrollhelp.site/developer-docs/prepare-for-an-accessibility-staging-review) and will generate a testing artifact you can submit as part of your staging review. Try to resolve as many issues as you're able to before your staging review, and update this artifact with that progress. Anything you're not able to resolve on your own can be discussed as part of the staging review.
+        This issue template will help walk you through [required foundational accessibility testing](https://depo-platform-documentation.scrollhelp.site/collaboration-cycle/prepare-for-an-accessibility-staging-review) and will generate a testing artifact you can submit as part of your staging review. Try to resolve as many issues as you're able to before your staging review, and update this artifact with that progress. Anything you're not able to resolve on your own can be discussed as part of the staging review.
         
         It's okay if you can't complete all of the steps, or if you identify problems but aren't able to fix them. Try to do as much as you can. Tell us what you're able to do, what you found, and if you have any questions or concerns heading into your review.
         
@@ -32,7 +32,7 @@ body:
       options:
         - label: Team name, product name, and feature name have been added to the title of this issue.
           required: true
-        - label: Product label and feature label (if applicable) have been added to this issue.
+        - label: Team label, product label and feature label (if applicable) have been added to this issue.
           required: true
   - type: markdown
     attributes:
@@ -45,7 +45,7 @@ body:
         
         We recommend that designers make accessible color choices before any code is written, and then double-check colors prior to staging review.
 
-        [Learn more about testing for color and color contrast](https://depo-platform-documentation.scrollhelp.site/developer-docs/prepare-for-an-accessibility-staging-review#Prepareforanaccessibilitystagingreview-Colortests) or [watch a color and color contrast testing demo](https://www.youtube.com/watch?v=ReLtfiZlSCo).
+        [Learn more about testing for color and color contrast](https://depo-platform-documentation.scrollhelp.site/collaboration-cycle/prepare-for-an-accessibility-staging-review#Prepareforanaccessibilitystagingreview-Useofcolorandcolorcontrastuse-of-color) or [watch a color and color contrast testing demo](https://www.youtube.com/watch?v=ReLtfiZlSCo).
   - type: input
     id: color-tester
     attributes:
@@ -84,7 +84,7 @@ body:
         
         We recommend that front-end engineers test using axe as part of their daily development to catch and resolve issues while coding, and then complete a comprehensive page-by-page scan prior to staging review.
         
-        [Learn more about testing with axe](https://depo-platform-documentation.scrollhelp.site/developer-docs/prepare-for-an-accessibility-staging-review#Prepareforanaccessibilitystagingreview-Axescansindailydevelopment.1) or [watch an axe DevTools demo](https://www.youtube.com/watch?v=WOBTHDDTytg).
+        [Learn more about testing with axe](https://depo-platform-documentation.scrollhelp.site/collaboration-cycle/prepare-for-an-accessibility-staging-review#Prepareforanaccessibilitystagingreview-AutomatedtestingwithaxebyDequeaxe) or [watch an axe DevTools demo](https://www.youtube.com/watch?v=WOBTHDDTytg).
         
         axe must also be integrated into your product's [end-to-end testing with Cypress](https://depo-platform-documentation.scrollhelp.site/developer-docs/end-to-end-testing-with-cypress). See also [Writing an end-to-end test](https://depo-platform-documentation.scrollhelp.site/developer-docs/writing-an-end-to-end-test) and [Accessibility testing helper functions](https://depo-platform-documentation.scrollhelp.site/developer-docs/accessibility-testing-helper-functions).
   - type: input
@@ -125,7 +125,7 @@ body:
         
         We recommend that designers think about how content will resize and reflow in high-zoom situations prior to handing off to engineers. High-fidelity prototypes at high zoom aren't required, but designers may want to create low-fi wireframes for complex page layouts. Once coded, content zoom and reflow should be tested prior to staging review.
         
-        [Learn more about testing content zoom and reflow](https://depo-platform-documentation.scrollhelp.site/developer-docs/prepare-for-an-accessibility-staging-review#Prepareforanaccessibilitystagingreview-Contentresizecheck) or [watch a content zoom and resizing demo](https://www.youtube.com/watch?v=cO6wJK2Mp5U).
+        [Learn more about testing content zoom and reflow](https://depo-platform-documentation.scrollhelp.site/collaboration-cycle/prepare-for-an-accessibility-staging-review#Prepareforanaccessibilitystagingreview-Contentzoomandreflowcontent-zoom) or [watch a content zoom and resizing demo](https://www.youtube.com/watch?v=cO6wJK2Mp5U).
   - type: input
     id: zoom-tester
     attributes:
@@ -155,7 +155,7 @@ body:
         
         We recommend that designers think about [Tab] order while creating prototypes, and that they annotate their prototypes whenever [Tab] order isn't clear. As the product is coded, front-end engineers should do regular keyboard navigation spot checks and complete a comprehensive test prior to staging review.
         
-        [Learn more about keyboard navigation testing](https://depo-platform-documentation.scrollhelp.site/developer-docs/prepare-for-an-accessibility-staging-review#Keyboard-navigation-check) or [watch a keyboard navigation testing demo](https://www.youtube.com/watch?v=YvPEK1Y08uM).
+        [Learn more about keyboard navigation testing](https://depo-platform-documentation.scrollhelp.site/collaboration-cycle/prepare-for-an-accessibility-staging-review#Prepareforanaccessibilitystagingreview-Keyboardnavigationkeyboard-nav) or [watch a keyboard navigation testing demo](https://www.youtube.com/watch?v=YvPEK1Y08uM).
   - type: input
     id: keyboard-tester
     attributes:
@@ -183,4 +183,4 @@ body:
     id: additional-findings
     attributes:
       label: Do you have any other results to share?
-      description: If you've tested using screen readers, mobile devices, or any other tools, tell us about any issues that you've identified. See the information about [advanced accessibility testing](https://depo-platform-documentation.scrollhelp.site/developer-docs/prepare-for-an-accessibility-staging-review#Prepareforanaccessibilitystagingreview-Advancedaccessibilitytests(recommended)) on Platform website.
+      description: If you've tested using screen readers, mobile devices, or any other tools, tell us about any issues that you've identified. See the information about [advanced accessibility testing](https://depo-platform-documentation.scrollhelp.site/collaboration-cycle/prepare-for-an-accessibility-staging-review#Prepareforanaccessibilitystagingreview-Advancedaccessibilitytests(recommended)advanced-testing) on Platform website.
