--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ scripts/repo-deprecation.log.csv
 .idea
 platform/cms/research/user-survey-results/CMS User Satisfaction - Q1 2021.pdf
 teams/vsa/teams/sitewide-content/GitHub_content_process (1).pdf
+platform/cms/accelerated_publishing/AP - Solution Options Matrix.pdf
+platform/cms/accelerated_publishing/content-build/content-build.pdf
