--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,6 @@ platform/cms/accelerated_publishing/AP - Solution Options Matrix.pdf
 platform/cms/accelerated_publishing/content-build/content-build.pdf
 platform/cms/archive/governance-new-vagov/Drupal-sections-user-roles-permissions-042721.pdf
 platform/cms/archive/governance-new-vagov/stakeholder-user-interview-notes/BS-VHA-web-comms-interview-governance.pdf
-platform/cms/*
-platform/cms/accelerated_publishing/AP - Solution Options Matrix.pdf
-platform/cms/accelerated_publishing/content-build/content-build.pdf
-platform/cms/archive/governance-new-vagov/Drupal-sections-user-roles-permissions-042721.pdf
-platform/cms/archive/governance-new-vagov/stakeholder-user-interview-notes/BS-VHA-web-comms-interview-governance.pdf
-platform/cms/archive/governance-new-vagov/stakeholder-user-interview-notes/GH-OPIA-and-Web-Gov-Board-interview-governance.pdf
+platform/*
+scripts/*
+teams/*
