--- a/.github/ISSUE_TEMPLATE/recruitment_test.yaml
+++ b/.github/ISSUE_TEMPLATE/recruitment_test.yaml
@@ -56,8 +56,8 @@ body:
         - Coast Guard											
         - National Guard											
         - Public Health Corps
-      validation:
-        required: true
+    validations:
+      required: true
   - type: dropdown
     id: technology
     attributes:
